add all updates

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@tensorflow/tfjs": "^4.15.0",
     "@types/react-redux": "^7.1.33",
     "@types/redux": "^3.6.0",
+    "antd": "^5.12.8",
     "axios": "^1.6.5",
+    "bad-words": "^3.0.4",
     "classnames": "^2.5.1",
     "formik": "^2.4.5",
     "moment": "^2.30.1",
@@ -26,6 +28,9 @@
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
+    "react-scroll-to-bottom": "^4.2.0",
+    "react-text-toxicity": "^0.1.0",
+    "react-toxicity-recognizer": "^1.0.5",
     "redux": "^5.0.1",
     "sass": "^1.69.7",
     "socket.io-client": "^4.7.3",
@@ -33,8 +38,10 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/bad-words": "^3.0.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-scroll-to-bottom": "^4.2.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
